--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -14,11 +14,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <span class="navbar-brand h5">
-                            <span th:text="${user.email}"></span>
+                            <span id="headerUsername"></span>
                             <span>with roles: </span>
-                            <span th:each="role : ${user.roles}">
-                                <span th:text="${role}"></span>
-                            </span>
+                            <span id="headerRoles"></span>
                     </span>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -33,14 +31,7 @@
     <div class="col-2 bg-body">
         <br>
         <ul class="nav nav-pills flex-column">
-            <div th:if="${user.getRolesNames().contains('ROLE_ADMIN')}">
-                <li class="nav-item">
-                    <a class="nav-link " aria-current="page" th:href="@{/admin}">Admin</a>
-                </li>
-            </div>
-            <li class="nav-item">
-                <a class="nav-link active" th:href="@{/user}">User</a>
-            </li>
+                <a class="nav-link active" href="/user">User</a>
         </ul>
     </div>
 
@@ -69,38 +60,26 @@
                                 <th> Role</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr class="align-middle">
-                                <td th:text="${user.id}"></td>
-                                <td th:text="${user.firstName}"></td>
-                                <td th:text="${user.lastName}"></td>
-                                <td th:text="${user.age}"></td>
-                                <td th:text="${user.email}"></td>
-                                <td>
-                                    <span th:each="role : ${user.roles}">
-                                        <span th:text="${role}"></span>
-                                    </span>
-                                </td>
-                            </tr>
-                            </tbody>
+                            <tbody id="userTable"></tbody>
                         </table>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+<script src="app.js"></script>
 </body>
 </html>
